dist_man1_MANS=

if BUILD_ITSAMEMED
  dist_man1_MANS+=itsamemed.1
endif

if ENABLE_QT
  dist_man1_MANS+=itsameme-qt.1
endif

if BUILD_ITSAMEME_CLI
  dist_man1_MANS+=itsameme-cli.1
endif

if BUILD_ITSAMEME_TX
  dist_man1_MANS+=itsameme-tx.1
endif

if BUILD_ITSAMEME_UTIL
  dist_man1_MANS+=itsameme-util.1
endif

if ENABLE_WALLET
if BUILD_ITSAMEME_WALLET
  dist_man1_MANS+=itsameme-wallet.1
endif
endif
